--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,9 +5,9 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="16"
+        android:minSdkVersion="18"
         android:targetSdkVersion="21" />
-    
+
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -37,29 +37,41 @@
             android:permission="android.permission.BIND_REMOTEVIEWS" >
         </service>
         <service
-            android:name=".SmartpushNotificationDetectionService"
+            android:name="mcgill.cpslab.smartpush.event.SmartpushEventDetectionService"
             android:exported="true"
+            android:enabled="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE" >
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
         </service>
-        
-        <service android:name=".SmartpushCoreService"
-            android:exported="false">
+        <service
+            android:name=".SmartpushCoreService"
+            android:exported="false" >
             <intent-filter>
-                <action android:name="mcgill.cpslab.smartpush.SmartpushCoreService"></action>
+                <action android:name="mcgill.cpslab.smartpush.SmartpushCoreService" >
+                </action>
             </intent-filter>
         </service>
-        
+
         <receiver
             android:name=".Startup"
             android:enabled="true"
             android:exported="true" >
             <intent-filter>
-		        <action android:name="android.intent.action.BOOT_COMPLETED" />
-		    </intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
         </receiver>
+
+        <service
+            android:name=".SmartpushNotificationListenerService"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
+            android:enabled="true"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
