--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,12 +9,17 @@
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data android:name="com.google.android.gms.version"
+        	android:value="@integer/google_play_services_version" />
         <activity android:name=".SmartpushConfigureActivity" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
@@ -37,9 +42,9 @@
             android:permission="android.permission.BIND_REMOTEVIEWS" >
         </service>
         <service
-            android:name="mcgill.cpslab.smartpush.event.SmartpushEventDetectionService"
-            android:exported="true"
+            android:name=".event.SmartpushEventDetectionService"
             android:enabled="true"
+            android:exported="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE" >
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
@@ -65,13 +70,20 @@
 
         <service
             android:name=".SmartpushNotificationListenerService"
-            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
             android:enabled="true"
-            android:exported="false" >
+            android:exported="false"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" >
             <intent-filter>
-                <action android:name="android.service.notification.NotificationListenerService"/>
+                <action android:name="android.service.notification.NotificationListenerService" />
             </intent-filter>
         </service>
+        
+        <service 
+            android:name="mcgill.cpslab.smartpush.features.useractivity.SmartpushActivityRecognitionIntentService"
+            android:enabled="true">
+            
+        </service>
+        
     </application>
 
 </manifest>
